--- a/src/main.css
+++ b/src/main.css
@@ -18,10 +18,15 @@
     --font-hand: "Yellowtail";
 }
 
+html{
+    overflow-y:hidden;
+}
+
 .app_root{
     background-color: var(--background-default);
     color:var(--text-default);
     font-family: var(--font);
+    overflow-y:hidden;
 }
 
 .border-default{
@@ -192,4 +197,26 @@ input[type=color]::-webkit-color-swatch-wrapper{
 
 .remove-blur{
     backdrop-filter: none;
+}
+
+::-webkit-scrollbar{
+    width: 5px;
+}
+
+::-webkit-scrollbar-track{
+    background: transparent;
+}
+
+::-webkit-scrollbar-thumb{
+    background: #999;
+    border-radius: 5px;
+    margin-top: 2px;
+    margin-bottom: 2px;
+    display:block;
+    width: 2px;
+    border: 1px solid transparent;
+}
+
+::-webkit-scrollbar-thumb:hover{
+    background: #777;
 }
